[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/CloudScene.gd" type="Script" id=1]

[node name="CloudScene" type="Node2D"]
script = ExtResource( 1 )

[node name="CloudTimer" type="Timer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="SkyAndSandLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="SkyAndSand" type="Sprite" parent="ParallaxBackground/SkyAndSandLayer"]
position = Vector2( 240, 136 )

[node name="Mountains2Layer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0 )

[node name="Mountains2" type="Sprite" parent="ParallaxBackground/Mountains2Layer"]
position = Vector2( 240, 136 )

[node name="Mountains1Layer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0 )

[node name="Mountains1" type="Sprite" parent="ParallaxBackground/Mountains1Layer"]
position = Vector2( 240, 136 )

[node name="CloudLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0 )

[node name="CloudContainer" type="Node2D" parent="ParallaxBackground/CloudLayer"]
position = Vector2( 0, 13 )
